--- a/taiga-front-dist/Dockerfile
+++ b/taiga-front-dist/Dockerfile
@@ -1,9 +1,16 @@
-FROM nginx:1.7
+FROM nginx
 
 MAINTAINER Hylke Visser <htdvisser@gmail.com>
 
+# For proxy, use as --build-arg in docker build command:
+# --build-arg PKG_PROXY='Acquire::http { Proxy "http://<proxy_ip>:<port>"; };'
+ARG PKG_PROXY
+
 # Install Git
-RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+RUN \
+    # Set a package proxy in next line
+    echo ${PKG_PROXY} > /etc/apt/apt.conf; \
+    apt-get update && apt-get install -y git wget && rm -rf /var/lib/apt/lists/*
 
 # NginX Configuration
 ADD nginx.conf /etc/nginx/nginx.conf
@@ -17,10 +24,11 @@ RUN ln -sf /dev/stderr /var/log/nginx/error.log
 
 # Install taiga-front-dist
 RUN \
-  mkdir -p /usr/local/taiga && \
-  git clone https://github.com/taigaio/taiga-front-dist.git /usr/local/taiga/taiga-front-dist && \
-  cd /usr/local/taiga/taiga-front-dist && \
-  git checkout stable
+  mkdir -p /usr/local/taiga/taiga-front-dist && \
+  # git clone https://github.com/taigaio/taiga-front-dist.git /usr/local/taiga/taiga-front-dist && \
+  wget -qO- https://github.com/taigaio/taiga-front-dist/archive/stable.tar.gz | tar xvz --strip-components=1 -C /usr/local/taiga/taiga-front-dist
+  # cd /usr/local/taiga/taiga-front-dist && \
+  # git checkout stable
 
 # Configuration and Start scripts
 ADD ./configure /usr/local/taiga/configure
