--- a/taiga.yml
+++ b/taiga.yml
@@ -1,45 +1,47 @@
-data:
-  image: tianon/true
-  volumes:
-    - /var/lib/postgresql/data
-    - /usr/local/taiga/media
-    - /usr/local/taiga/static
-    - /usr/local/taiga/logs
-
 db:
   image: postgres
   environment:
     POSTGRES_USER: taiga
     POSTGRES_PASSWORD: password
-  volumes_from:
-    - data
+  volumes:
+    - /var/lib/postgresql/data:/var/lib/postgresql/data
   restart: always
 
 taigaback:
-  build: taiga-back
-  hostname: dev.example.com
+  image: filhocf/taiga-back
+  hostname: example.com
   environment:
     SECRET_KEY: examplesecretkey
     EMAIL_USE_TLS: 'True'
-    EMAIL_HOST: smtp.gmail.com
+    EMAIL_HOST: smtp.example.com
     EMAIL_PORT: 587
-    EMAIL_HOST_USER: youremail@gmail.com
+    EMAIL_HOST_USER: youremail@example.com
     EMAIL_HOST_PASSWORD: yourpassword
     POSTGRES_HOST: postgres
     POSTGRES_PORT: 5432
+    POSTGRES_USER: taiga
+    POSTGRES_DB_NAME: taiga
+    POSTGRES_PASSWORD: changeme
   links:
     - db:postgres
-  volumes_from:
-    - data
+  volumes:
+    - /var/lib/taiga/media:/usr/local/taiga/media
+    - /var/lib/taiga/static:/usr/local/taiga/static
+    - /var/lib/taiga/logs:/usr/local/taiga/logs
   restart: always
 
 taigafront:
-  build: taiga-front-dist
-  hostname: dev.example.com
+  image: filhocf/taiga-front
+  hostname: example.com
+  environment:
+    SCHEME: http
   links:
     - taigaback
-  volumes_from:
-    - data
+  volumes:
+    - /var/lib/taiga/media:/var/lib/taiga/media
+    - /var/lib/taiga/static:/usr/local/taiga/static
+    - /var/lib/taiga/logs:/usr/local/taiga/logs
   ports:
-    - 0.0.0.0:80:80
+    - 80:80
+    - 443:443
   restart: always
